--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    font-family: "Domine", serif;
+    font-optical-sizing: auto;
+    font-weight: 900;
+    font-style: normal;
+}
